@@ -255,23 +255,14 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
+                <version>2.22.2</version>
                 <configuration>
-                    <forkCount>3</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>${argLine} -Xmx1024m -XX:MaxPermSize=256m
-                        --illegal-access=permit
-                    </argLine>
-                    <systemPropertyVariables>
-                        <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}
-                        </databaseSchema>
-                    </systemPropertyVariables>
-                    <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}
-                    </workingDirectory>
+                    <skipTests>false</skipTests>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <forkMode>once</forkMode>
                 </configuration>
             </plugin>
             <plugin>
